added the correct images and updated information

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
               <tr>
               	<td>
                   <center>
-                    <!-- <h3><a href="assets/img/hondaS18.pdf">Honda Specials</a></h3> -->
-                    <h3>Honda</h3>
+                    <h3><a href="assets/img/hondaF18.pdf">Honda Specials</a></h3>
+                    <!-- <h3>Honda</h3> -->
                   </center>
                 </td>
                 <td>
@@ -166,8 +166,8 @@
               <tr>
               	<td>
                   <center>
-                    <!-- <h3><a href="assets/img/stihlBattS18.pdf">Stihl LI-ION Specials</a></h3> -->
-                    <h3>Stihl LI-ION</h3>
+                    <h3><a href="assets/img/stihlBattF18.pdf">Stihl LI-ION Specials</a></h3>
+                    <!-- <h3>Stihl LI-ION</h3> -->
                   </center>
                 </td>
               	<td>
